--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,11 @@ streamlit
 openai
 transformers
 torch
-google-api-python-client
-google-auth-httplib2
-google-auth-oauthlib
 pandas
+google-api-python-client
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+httplib2
+sqlite3-bro
+
